--- a/.gitignore
+++ b/.gitignore
@@ -103,4 +103,5 @@ typings/
 # End of https://www.gitignore.io/api/linux,node
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+out/
+*har.json
